Add patch modules for javax in bat and sh files